--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <section class="content-section bg-light" id="about">
       <div class="container text-center">
         <div class="row">
-          <div class="col-lg-8 mx-auto coffset-lg-2">
-            <h2 class="mb-5">About moi!</h2>
+          <div class="col-lg-10 mx-auto">
+            <h2>About me</h2>
             <p class="lead mb-5">Developer and design enthusiast with a passion for tech. I love developing & <a href="https://joannakatswebdeveloper.com/">designing streamlined websites</a> while providing the best user experience possible.</p>
 
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">My Services</a>
