--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>About me</h2>
+            <h2 class="mb-4">About me</h2>
             <p class="lead mb-5">Developer and design enthusiast with a passion for tech. I love developing & <a href="https://joannakatswebdeveloper.com/">designing streamlined websites</a> while providing the best user experience possible.</p>
 
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">My Services</a>
@@ -83,7 +83,7 @@
       <div class="container">
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0">Services</h3>
-          <h2 class="mb-5">What We Offer</h2>
+          <h2 class="mb-5">What I Offer</h2>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -93,7 +93,7 @@
             <h4>
               <strong>Responsive</strong>
             </h4>
-            <p class="text-faded mb-0">Looks great on any screen size!</p>
+            <p class="text-faded mb-0">Looks great on any screen size! Guaranteed!</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
@@ -102,7 +102,16 @@
             <h4>
               <strong>Redesigned</strong>
             </h4>
-            <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+            <p class="text-faded mb-0">Freshly redesigned for the web and mobile</p>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fa fa-code"></i>
+            </span>
+            <h4>
+              <strong>Coded</strong>
+            </h4>
+            <p class="text-faded mb-0">Customers <i class="fa fa-heart"></i> our streammlined designs &amp; code!<p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
@@ -111,18 +120,8 @@
             <h4>
               <strong>Favorited</strong>
             </h4>
-            <p class="text-faded mb-0">Millions of users
-              <i class="fa fa-heart"></i>
-              Start Bootstrap!</p>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-mustache"></i>
-            </span>
-            <h4>
-              <strong>Question</strong>
-            </h4>
-            <p class="text-faded mb-0">I mustache you a question...</p>
+            <p class="text-faded mb-0">Customer <i class="fa fa-heart"></i> satisfaction is the priority!
+              </p>
           </div>
         </div>
       </div>
@@ -131,10 +130,10 @@
     <!-- Callout -->
     <section class="callout">
       <div class="container text-center">
-        <h2 class="mx-auto mb-5">Welcome to
+        <h2 class="mx-auto mb-5">Discover Design &amp; Discover
           <em>your</em>
-          next website!</h2>
-        <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download Now!</a>
+          style</h2>
+        <a class="btn btn-primary btn-xl" href="https://joannakatswebdeveloper.com/">View more!</a>
       </div>
     </section>
 
