--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <!-- Call to Action -->
     <section class="content-section bg-primary text-white">
       <div class="container text-center">
-        <h2 class="mb-4">View more work here...</h2>
+        <h2 class="mb-4">View my latest work here...</h2>
         <a href="#" class="btn btn-xl btn-light mr-4">Click Me!</a>
         <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
       </div>
