--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h4>
               <strong>Favorited</strong>
             </h4>
-            <p class="text-faded mb-0">Customer <i class="fa fa-heart"></i> satisfaction is the priority!
+            <p class="text-faded mb-0">Customer satisfaction is the priority!
               </p>
           </div>
         </div>
@@ -231,7 +231,7 @@
             </a>
           </li>
         </ul>
-        <p class="text-muted small mb-0">Copyright &copy; Your Website 2017</p>
+        <p class="text-muted small mb-0"> Copyright &copy; <a href="https://joannakatswebdeveloper.com/">Joanna Katsifaraki 2018</a></p>
       </div>
     </footer>
 
