--- a/index.html
+++ b/index.html
@@ -130,12 +130,11 @@
     <!-- Callout -->
     <section class="callout">
       <div class="container text-center">
-        <h2 class="mx-auto mb-5">Discover Design &amp; Discover
-          <em>your</em>
-          style</h2>
+        <h2 class="mx-auto mb-5">Design &amp; Style</h2>
         <a class="btn btn-primary btn-xl" href="https://joannakatswebdeveloper.com/">View more!</a>
       </div>
     </section>
+
 
     <!-- Portfolio -->
     <section class="content-section" id="portfolio">
