--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="content-section bg-light" id="about">
       <div class="container text-center">
         <div class="row">
-          <div class="col-lg-10 mx-auto">
+          <div class="col-md-8  offset-md-2 mx-auto">
             <h2 class="mb-4">About me</h2>
             <p class="lead mb-5">Developer and design enthusiast with a passion for tech. I love developing & <a href="https://joannakatswebdeveloper.com/">designing streamlined websites</a> while providing the best user experience possible.</p>
 
