Modified section 2 and added links

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <section class="callout">
       <div class="container text-center">
         <h2 class="mx-auto mb-5">Design &amp; Style</h2>
-        <a class="btn btn-primary btn-xl" href="https://joannakatswebdeveloper.com/">View more!</a>
+        <a class="btn btn-primary btn-xl" href="https://jojokats.github.io/rotate-card/">View more!</a>
       </div>
     </section>
 
@@ -145,7 +145,7 @@
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://joannakatswebdeveloper.com/">
               <span class="caption">
                 <span class="caption-content">
                   <h2>It's in the details</h2>
@@ -156,7 +156,7 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://joannakatswebdeveloper.com/">
               <span class="caption">
                 <span class="caption-content">
                   <h2>It fills its intended function</h2>
@@ -167,7 +167,7 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://joannakatswebdeveloper.com/">
               <span class="caption">
                 <span class="caption-content">
                   <h2>It makes a product useful</h2>
@@ -178,7 +178,7 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://joannakatswebdeveloper.com/">
               <span class="caption">
                 <span class="caption-content">
                   <h2>It is user-oriented</h2>
@@ -194,11 +194,10 @@
     </section>
 
     <!-- Call to Action -->
-    <section class="content-section bg-primary text-white">
+    <section class="content-section2">
       <div class="container text-center">
         <h2 class="mb-4">View my latest work here!</h2>
-        <a href="#" class="btn btn-xl btn-light mr-4">View more</a>
-        <a href="#" class="btn btn-xl btn-dark">Look at Me!</a>
+        <a href="https://jojokats.github.io/joanna-grid-portfolio/" class="btn btn-xl btn-dark">Latest works</a>
       </div>
     </section>
 
