--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       </ul>
     </nav>
 
+
     <!-- Header -->
     <header class="masthead d-flex">
       <div class="container text-center my-auto">
@@ -63,6 +64,7 @@
       </div>
       <div class="overlay"></div>
     </header>
+
 
     <!-- About -->
     <section class="content-section bg-light" id="about">
@@ -77,6 +79,7 @@
         </div>
       </div>
     </section>
+
 
     <!-- Services -->
     <section class="content-section bg-primary text-white text-center" id="services">
@@ -111,7 +114,7 @@
             <h4>
               <strong>Coded</strong>
             </h4>
-            <p class="text-faded mb-0">Customers <i class="fa fa-heart"></i> our streammlined designs &amp; code!<p>
+            <p class="text-faded mb-0">Customers <i class="fa fa-heart"></i> our streammlined designs &amp; code!</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
@@ -126,6 +129,7 @@
         </div>
       </div>
     </section>
+
 
     <!-- Callout -->
     <section class="callout">
@@ -190,8 +194,8 @@
           </div>
         </div>
       </div><!-- /container -->
-
     </section>
+
 
     <!-- Call to Action -->
     <section class="content-section2">
@@ -200,6 +204,7 @@
         <a href="https://jojokats.github.io/joanna-grid-portfolio/" class="btn btn-xl btn-dark">Latest works</a>
       </div>
     </section>
+
 
     <!-- Map -->
     <section id="contact" class="map">
@@ -210,6 +215,7 @@
         <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
       </small>
     </section>
+
 
     <!-- Footer -->
     <footer class="footer text-center">
@@ -234,6 +240,7 @@
         <p class="text-muted small mb-0"> Copyright &copy; <a href="https://joannakatswebdeveloper.com/">Joanna Katsifaraki 2018</a></p>
       </div>
     </footer>
+
 
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
